# webphoneID

./: CMakeLists.txt  IDEntryDialog.cpp  IDEntryDialog.h  IDEntryDialog.ui  README.md  main.cpp  settings.ini  webphoneID.qrc  webphoneID.rc
deploy/config/: config.xml
doc/: notes.txt
